parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> <empty>
Rule 2     start -> start code_entity
Rule 3     code_entity -> iterative_statement
Rule 4     code_entity -> conditional_statement
Rule 5     code_entity -> expression
Rule 6     code_entity -> input_function
Rule 7     code_entity -> output_function
Rule 8     iterative_statement -> WHILE expression COLON start ENDWHILE
Rule 9     iterative_statement -> FOR expression COMMA expression COMMA expression COLON start ENDFOR
Rule 10    conditional_statement -> IF expression COLON start ELSE start ENDIF
Rule 11    conditional_statement -> IF expression COLON start ENDIF
Rule 12    expression -> assignment_statement
Rule 13    assignment_statement -> or_statement
Rule 14    assignment_statement -> IDENTIFIER EQUALS or_statement
Rule 15    assignment_statement -> IDENTIFIER LBRACKET INTEGER RBRACKET EQUALS INTEGER
Rule 16    assignment_statement -> IDENTIFIER LBRACKET INTEGER RBRACKET EQUALS FLOAT
Rule 17    or_statement -> and_statement
Rule 18    or_statement -> or_statement OR and_statement
Rule 19    and_statement -> equality_statement
Rule 20    and_statement -> and_statement AND equality_statement
Rule 21    equality_statement -> relational_statement
Rule 22    equality_statement -> equality_statement EQ relational_statement
Rule 23    equality_statement -> equality_statement NEQ relational_statement
Rule 24    relational_statement -> add_statement
Rule 25    relational_statement -> relational_statement LT add_statement
Rule 26    relational_statement -> relational_statement GT add_statement
Rule 27    relational_statement -> relational_statement LTEQ add_statement
Rule 28    relational_statement -> relational_statement GTEQ add_statement
Rule 29    add_statement -> multiply_statement
Rule 30    add_statement -> add_statement PLUS multiply_statement
Rule 31    add_statement -> add_statement MINUS multiply_statement
Rule 32    multiply_statement -> unary_statement
Rule 33    multiply_statement -> multiply_statement TIMES unary_statement
Rule 34    multiply_statement -> multiply_statement DIVIDE unary_statement
Rule 35    multiply_statement -> multiply_statement MOD unary_statement
Rule 36    unary_statement -> exponent
Rule 37    unary_statement -> MINUS unary_statement
Rule 38    unary_statement -> NOT unary_statement
Rule 39    exponent -> term
Rule 40    exponent -> term POWER unary_statement
Rule 41    term -> IDENTIFIER
Rule 42    term -> atom
Rule 43    term -> LPAREN expression RPAREN
Rule 44    atom -> INTEGER
Rule 45    atom -> FLOAT
Rule 46    atom -> STRING
Rule 47    atom -> TRUE
Rule 48    atom -> FALSE
Rule 49    atom -> LBRACKET elements RBRACKET
Rule 50    atom -> IDENTIFIER LBRACKET INTEGER RBRACKET
Rule 51    elements -> elements INTEGER
Rule 52    elements -> elements FLOAT
Rule 53    elements -> <empty>
Rule 54    input_function -> INPUT LPAREN IDENTIFIER RPAREN
Rule 55    output_function -> PRINT LPAREN term RPAREN

Terminals, with rules where they appear

AND                  : 20
COLON                : 8 9 10 11
COMMA                : 9 9
DIVIDE               : 34
ELSE                 : 10
ENDFOR               : 9
ENDIF                : 10 11
ENDWHILE             : 8
EQ                   : 22
EQUALS               : 14 15 16
FALSE                : 48
FLOAT                : 16 45 52
FOR                  : 9
GT                   : 26
GTEQ                 : 28
IDENTIFIER           : 14 15 16 41 50 54
IF                   : 10 11
INPUT                : 54
INTEGER              : 15 15 16 44 50 51
LBRACKET             : 15 16 49 50
LPAREN               : 43 54 55
LT                   : 25
LTEQ                 : 27
MINUS                : 31 37
MOD                  : 35
NEQ                  : 23
NOT                  : 38
OR                   : 18
PLUS                 : 30
POWER                : 40
PRINT                : 55
RBRACKET             : 15 16 49 50
RPAREN               : 43 54 55
STRING               : 46
TIMES                : 33
TRUE                 : 47
WHILE                : 8
error                : 

Nonterminals, with rules where they appear

add_statement        : 24 25 26 27 28 30 31
and_statement        : 17 18 20
assignment_statement : 12
atom                 : 42
code_entity          : 2
conditional_statement : 4
elements             : 49 51 52
equality_statement   : 19 20 22 23
exponent             : 36
expression           : 5 8 9 9 9 10 11 43
input_function       : 6
iterative_statement  : 3
multiply_statement   : 29 30 31 33 34 35
or_statement         : 13 14 18
output_function      : 7
relational_statement : 21 22 23 25 26 27 28
start                : 2 8 9 10 10 11 0
term                 : 39 40 55
unary_statement      : 32 33 34 35 37 38 40

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> .
    (2) start -> . start code_entity

    WHILE           reduce using rule 1 (start -> .)
    FOR             reduce using rule 1 (start -> .)
    IF              reduce using rule 1 (start -> .)
    INPUT           reduce using rule 1 (start -> .)
    PRINT           reduce using rule 1 (start -> .)
    IDENTIFIER      reduce using rule 1 (start -> .)
    MINUS           reduce using rule 1 (start -> .)
    NOT             reduce using rule 1 (start -> .)
    LPAREN          reduce using rule 1 (start -> .)
    INTEGER         reduce using rule 1 (start -> .)
    FLOAT           reduce using rule 1 (start -> .)
    STRING          reduce using rule 1 (start -> .)
    TRUE            reduce using rule 1 (start -> .)
    FALSE           reduce using rule 1 (start -> .)
    LBRACKET        reduce using rule 1 (start -> .)
    $end            reduce using rule 1 (start -> .)

    start                          shift and go to state 1

state 1

    (0) S' -> start .
    (2) start -> start . code_entity
    (3) code_entity -> . iterative_statement
    (4) code_entity -> . conditional_statement
    (5) code_entity -> . expression
    (6) code_entity -> . input_function
    (7) code_entity -> . output_function
    (8) iterative_statement -> . WHILE expression COLON start ENDWHILE
    (9) iterative_statement -> . FOR expression COMMA expression COMMA expression COLON start ENDFOR
    (10) conditional_statement -> . IF expression COLON start ELSE start ENDIF
    (11) conditional_statement -> . IF expression COLON start ENDIF
    (12) expression -> . assignment_statement
    (54) input_function -> . INPUT LPAREN IDENTIFIER RPAREN
    (55) output_function -> . PRINT LPAREN term RPAREN
    (13) assignment_statement -> . or_statement
    (14) assignment_statement -> . IDENTIFIER EQUALS or_statement
    (15) assignment_statement -> . IDENTIFIER LBRACKET INTEGER RBRACKET EQUALS INTEGER
    (16) assignment_statement -> . IDENTIFIER LBRACKET INTEGER RBRACKET EQUALS FLOAT
    (17) or_statement -> . and_statement
    (18) or_statement -> . or_statement OR and_statement
    (19) and_statement -> . equality_statement
    (20) and_statement -> . and_statement AND equality_statement
    (21) equality_statement -> . relational_statement
    (22) equality_statement -> . equality_statement EQ relational_statement
    (23) equality_statement -> . equality_statement NEQ relational_statement
    (24) relational_statement -> . add_statement
    (25) relational_statement -> . relational_statement LT add_statement
    (26) relational_statement -> . relational_statement GT add_statement
    (27) relational_statement -> . relational_statement LTEQ add_statement
    (28) relational_statement -> . relational_statement GTEQ add_statement
    (29) add_statement -> . multiply_statement
    (30) add_statement -> . add_statement PLUS multiply_statement
    (31) add_statement -> . add_statement MINUS multiply_statement
    (32) multiply_statement -> . unary_statement
    (33) multiply_statement -> . multiply_statement TIMES unary_statement
    (34) multiply_statement -> . multiply_statement DIVIDE unary_statement
    (35) multiply_statement -> . multiply_statement MOD unary_statement
    (36) unary_statement -> . exponent
    (37) unary_statement -> . MINUS unary_statement
    (38) unary_statement -> . NOT unary_statement
    (39) exponent -> . term
    (40) exponent -> . term POWER unary_statement
    (41) term -> . IDENTIFIER
    (42) term -> . atom
    (43) term -> . LPAREN expression RPAREN
    (44) atom -> . INTEGER
    (45) atom -> . FLOAT
    (46) atom -> . STRING
    (47) atom -> . TRUE
    (48) atom -> . FALSE
    (49) atom -> . LBRACKET elements RBRACKET
    (50) atom -> . IDENTIFIER LBRACKET INTEGER RBRACKET

    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    IF              shift and go to state 10
    INPUT           shift and go to state 12
    PRINT           shift and go to state 15
    IDENTIFIER      shift and go to state 14
    MINUS           shift and go to state 26
    NOT             shift and go to state 29
    LPAREN          shift and go to state 13
    INTEGER         shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    LBRACKET        shift and go to state 18

    code_entity                    shift and go to state 2
    iterative_statement            shift and go to state 3
    conditional_statement          shift and go to state 4
    expression                     shift and go to state 5
    input_function                 shift and go to state 6
    output_function                shift and go to state 7
    assignment_statement           shift and go to state 11
    term                           shift and go to state 16
    or_statement                   shift and go to state 17
    and_statement                  shift and go to state 21
    equality_statement             shift and go to state 22
    relational_statement           shift and go to state 23
    add_statement                  shift and go to state 24
    multiply_statement             shift and go to state 25
    unary_statement                shift and go to state 27
    exponent                       shift and go to state 28
    atom                           shift and go to state 30

state 2

    (2) start -> start code_entity .

    WHILE           reduce using rule 2 (start -> start code_entity .)
    FOR             reduce using rule 2 (start -> start code_entity .)
    IF              reduce using rule 2 (start -> start code_entity .)
    INPUT           reduce using rule 2 (start -> start code_entity .)
    PRINT           reduce using rule 2 (start -> start code_entity .)
    IDENTIFIER      reduce using rule 2 (start -> start code_entity .)
    MINUS           reduce using rule 2 (start -> start code_entity .)
    NOT             reduce using rule 2 (start -> start code_entity .)
    LPAREN          reduce using rule 2 (start -> start code_entity .)
    INTEGER         reduce using rule 2 (start -> start code_entity .)
    FLOAT           reduce using rule 2 (start -> start code_entity .)
    STRING          reduce using rule 2 (start -> start code_entity .)
    TRUE            reduce using rule 2 (start -> start code_entity .)
    FALSE           reduce using rule 2 (start -> start code_entity .)
    LBRACKET        reduce using rule 2 (start -> start code_entity .)
    $end            reduce using rule 2 (start -> start code_entity .)
    ENDWHILE        reduce using rule 2 (start -> start code_entity .)
    ELSE            reduce using rule 2 (start -> start code_entity .)
    ENDIF           reduce using rule 2 (start -> start code_entity .)
    ENDFOR          reduce using rule 2 (start -> start code_entity .)


state 3

    (3) code_entity -> iterative_statement .

    WHILE           reduce using rule 3 (code_entity -> iterative_statement .)
    FOR             reduce using rule 3 (code_entity -> iterative_statement .)
    IF              reduce using rule 3 (code_entity -> iterative_statement .)
    INPUT           reduce using rule 3 (code_entity -> iterative_statement .)
    PRINT           reduce using rule 3 (code_entity -> iterative_statement .)
    IDENTIFIER      reduce using rule 3 (code_entity -> iterative_statement .)
    MINUS           reduce using rule 3 (code_entity -> iterative_statement .)
    NOT             reduce using rule 3 (code_entity -> iterative_statement .)
    LPAREN          reduce using rule 3 (code_entity -> iterative_statement .)
    INTEGER         reduce using rule 3 (code_entity -> iterative_statement .)
    FLOAT           reduce using rule 3 (code_entity -> iterative_statement .)
    STRING          reduce using rule 3 (code_entity -> iterative_statement .)
    TRUE            reduce using rule 3 (code_entity -> iterative_statement .)
    FALSE           reduce using rule 3 (code_entity -> iterative_statement .)
    LBRACKET        reduce using rule 3 (code_entity -> iterative_statement .)
    $end            reduce using rule 3 (code_entity -> iterative_statement .)
    ENDWHILE        reduce using rule 3 (code_entity -> iterative_statement .)
    ELSE            reduce using rule 3 (code_entity -> iterative_statement .)
    ENDIF           reduce using rule 3 (code_entity -> iterative_statement .)
    ENDFOR          reduce using rule 3 (code_entity -> iterative_statement .)


state 4

    (4) code_entity -> conditional_statement .

    WHILE           reduce using rule 4 (code_entity -> conditional_statement .)
    FOR             reduce using rule 4 (code_entity -> conditional_statement .)
    IF              reduce using rule 4 (code_entity -> conditional_statement .)
    INPUT           reduce using rule 4 (code_entity -> conditional_statement .)
    PRINT           reduce using rule 4 (code_entity -> conditional_statement .)
    IDENTIFIER      reduce using rule 4 (code_entity -> conditional_statement .)
    MINUS           reduce using rule 4 (code_entity -> conditional_statement .)
    NOT             reduce using rule 4 (code_entity -> conditional_statement .)
    LPAREN          reduce using rule 4 (code_entity -> conditional_statement .)
    INTEGER         reduce using rule 4 (code_entity -> conditional_statement .)
    FLOAT           reduce using rule 4 (code_entity -> conditional_statement .)
    STRING          reduce using rule 4 (code_entity -> conditional_statement .)
    TRUE            reduce using rule 4 (code_entity -> conditional_statement .)
    FALSE           reduce using rule 4 (code_entity -> conditional_statement .)
    LBRACKET        reduce using rule 4 (code_entity -> conditional_statement .)
    $end            reduce using rule 4 (code_entity -> conditional_statement .)
    ENDWHILE        reduce using rule 4 (code_entity -> conditional_statement .)
    ELSE            reduce using rule 4 (code_entity -> conditional_statement .)
    ENDIF           reduce using rule 4 (code_entity -> conditional_statement .)
    ENDFOR          reduce using rule 4 (code_entity -> conditional_statement .)


state 5

    (5) code_entity -> expression .

    WHILE           reduce using rule 5 (code_entity -> expression .)
    FOR             reduce using rule 5 (code_entity -> expression .)
    IF              reduce using rule 5 (code_entity -> expression .)
    INPUT           reduce using rule 5 (code_entity -> expression .)
    PRINT           reduce using rule 5 (code_entity -> expression .)
    IDENTIFIER      reduce using rule 5 (code_entity -> expression .)
    MINUS           reduce using rule 5 (code_entity -> expression .)
    NOT             reduce using rule 5 (code_entity -> expression .)
    LPAREN          reduce using rule 5 (code_entity -> expression .)
    INTEGER         reduce using rule 5 (code_entity -> expression .)
    FLOAT           reduce using rule 5 (code_entity -> expression .)
    STRING          reduce using rule 5 (code_entity -> expression .)
    TRUE            reduce using rule 5 (code_entity -> expression .)
    FALSE           reduce using rule 5 (code_entity -> expression .)
    LBRACKET        reduce using rule 5 (code_entity -> expression .)
    $end            reduce using rule 5 (code_entity -> expression .)
    ENDWHILE        reduce using rule 5 (code_entity -> expression .)
    ELSE            reduce using rule 5 (code_entity -> expression .)
    ENDIF           reduce using rule 5 (code_entity -> expression .)
    ENDFOR          reduce using rule 5 (code_entity -> expression .)


state 6

    (6) code_entity -> input_function .

    WHILE           reduce using rule 6 (code_entity -> input_function .)
    FOR             reduce using rule 6 (code_entity -> input_function .)
    IF              reduce using rule 6 (code_entity -> input_function .)
    INPUT           reduce using rule 6 (code_entity -> input_function .)
    PRINT           reduce using rule 6 (code_entity -> input_function .)
    IDENTIFIER      reduce using rule 6 (code_entity -> input_function .)
    MINUS           reduce using rule 6 (code_entity -> input_function .)
    NOT             reduce using rule 6 (code_entity -> input_function .)
    LPAREN          reduce using rule 6 (code_entity -> input_function .)
    INTEGER         reduce using rule 6 (code_entity -> input_function .)
    FLOAT           reduce using rule 6 (code_entity -> input_function .)
    STRING          reduce using rule 6 (code_entity -> input_function .)
    TRUE            reduce using rule 6 (code_entity -> input_function .)
    FALSE           reduce using rule 6 (code_entity -> input_function .)
    LBRACKET        reduce using rule 6 (code_entity -> input_function .)
    $end            reduce using rule 6 (code_entity -> input_function .)
    ENDWHILE        reduce using rule 6 (code_entity -> input_function .)
    ELSE            reduce using rule 6 (code_entity -> input_function .)
    ENDIF           reduce using rule 6 (code_entity -> input_function .)
    ENDFOR          reduce using rule 6 (code_entity -> input_function .)


state 7

    (7) code_entity -> output_function .

    WHILE           reduce using rule 7 (code_entity -> output_function .)
    FOR             reduce using rule 7 (code_entity -> output_function .)
    IF              reduce using rule 7 (code_entity -> output_function .)
    INPUT           reduce using rule 7 (code_entity -> output_function .)
    PRINT           reduce using rule 7 (code_entity -> output_function .)
    IDENTIFIER      reduce using rule 7 (code_entity -> output_function .)
    MINUS           reduce using rule 7 (code_entity -> output_function .)
    NOT             reduce using rule 7 (code_entity -> output_function .)
    LPAREN          reduce using rule 7 (code_entity -> output_function .)
    INTEGER         reduce using rule 7 (code_entity -> output_function .)
    FLOAT           reduce using rule 7 (code_entity -> output_function .)
    STRING          reduce using rule 7 (code_entity -> output_function .)
    TRUE            reduce using rule 7 (code_entity -> output_function .)
    FALSE           reduce using rule 7 (code_entity -> output_function .)
    LBRACKET        reduce using rule 7 (code_entity -> output_function .)
    $end            reduce using rule 7 (code_entity -> output_function .)
    ENDWHILE        reduce using rule 7 (code_entity -> output_function .)
    ELSE            reduce using rule 7 (code_entity -> output_function .)
    ENDIF           reduce using rule 7 (code_entity -> output_function .)
    ENDFOR          reduce using rule 7 (code_entity -> output_function .)


state 8

    (8) iterative_statement -> WHILE . expression COLON start ENDWHILE
    (12) expression -> . assignment_statement
    (13) assignment_statement -> . or_statement
    (14) assignment_statement -> . IDENTIFIER EQUALS or_statement
    (15) assignment_statement -> . IDENTIFIER LBRACKET INTEGER RBRACKET EQUALS INTEGER
    (16) assignment_statement -> . IDENTIFIER LBRACKET INTEGER RBRACKET EQUALS FLOAT
    (17) or_statement -> . and_statement
    (18) or_statement -> . or_statement OR and_statement
    (19) and_statement -> . equality_statement
    (20) and_statement -> . and_statement AND equality_statement
    (21) equality_statement -> . relational_statement
    (22) equality_statement -> . equality_statement EQ relational_statement
    (23) equality_statement -> . equality_statement NEQ relational_statement
    (24) relational_statement -> . add_statement
    (25) relational_statement -> . relational_statement LT add_statement
    (26) relational_statement -> . relational_statement GT add_statement
    (27) relational_statement -> . relational_statement LTEQ add_statement
    (28) relational_statement -> . relational_statement GTEQ add_statement
    (29) add_statement -> . multiply_statement
    (30) add_statement -> . add_statement PLUS multiply_statement
    (31) add_statement -> . add_statement MINUS multiply_statement
    (32) multiply_statement -> . unary_statement
    (33) multiply_statement -> . multiply_statement TIMES unary_statement
    (34) multiply_statement -> . multiply_statement DIVIDE unary_statement
    (35) multiply_statement -> . multiply_statement MOD unary_statement
    (36) unary_statement -> . exponent
    (37) unary_statement -> . MINUS unary_statement
    (38) unary_statement -> . NOT unary_statement
    (39) exponent -> . term
    (40) exponent -> . term POWER unary_statement
    (41) term -> . IDENTIFIER
    (42) term -> . atom
    (43) term -> . LPAREN expression RPAREN
    (44) atom -> . INTEGER
    (45) atom -> . FLOAT
    (46) atom -> . STRING
    (47) atom -> . TRUE
    (48) atom -> . FALSE
    (49) atom -> . LBRACKET elements RBRACKET
    (50) atom -> . IDENTIFIER LBRACKET INTEGER RBRACKET

    IDENTIFIER      shift and go to state 14
    MINUS           shift and go to state 26
    NOT             shift and go to state 29
    LPAREN          shift and go to state 13
    INTEGER         shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    LBRACKET        shift and go to state 18

    expression                     shift and go to state 34
    assignment_statement           shift and go to state 11
    or_statement                   shift and go to state 17
    and_statement                  shift and go to state 21
    equality_statement             shift and go to state 22
    relational_statement           shift and go to state 23
    add_statement                  shift and go to state 24
    multiply_statement             shift and go to state 25
    unary_statement                shift and go to state 27
    exponent                       shift and go to state 28
    term                           shift and go to state 16
    atom                           shift and go to state 30

state 9

    (9) iterative_statement -> FOR . expression COMMA expression COMMA expression COLON start ENDFOR
    (12) expression -> . assignment_statement
    (13) assignment_statement -> . or_statement
    (14) assignment_statement -> . IDENTIFIER EQUALS or_statement
    (15) assignment_statement -> . IDENTIFIER LBRACKET INTEGER RBRACKET EQUALS INTEGER
    (16) assignment_statement -> . IDENTIFIER LBRACKET INTEGER RBRACKET EQUALS FLOAT
    (17) or_statement -> . and_statement
    (18) or_statement -> . or_statement OR and_statement
    (19) and_statement -> . equality_statement
    (20) and_statement -> . and_statement AND equality_statement
    (21) equality_statement -> . relational_statement
    (22) equality_statement -> . equality_statement EQ relational_statement
    (23) equality_statement -> . equality_statement NEQ relational_statement
    (24) relational_statement -> . add_statement
    (25) relational_statement -> . relational_statement LT add_statement
    (26) relational_statement -> . relational_statement GT add_statement
    (27) relational_statement -> . relational_statement LTEQ add_statement
    (28) relational_statement -> . relational_statement GTEQ add_statement
    (29) add_statement -> . multiply_statement
    (30) add_statement -> . add_statement PLUS multiply_statement
    (31) add_statement -> . add_statement MINUS multiply_statement
    (32) multiply_statement -> . unary_statement
    (33) multiply_statement -> . multiply_statement TIMES unary_statement
    (34) multiply_statement -> . multiply_statement DIVIDE unary_statement
    (35) multiply_statement -> . multiply_statement MOD unary_statement
    (36) unary_statement -> . exponent
    (37) unary_statement -> . MINUS unary_statement
    (38) unary_statement -> . NOT unary_statement
    (39) exponent -> . term
    (40) exponent -> . term POWER unary_statement
    (41) term -> . IDENTIFIER
    (42) term -> . atom
    (43) term -> . LPAREN expression RPAREN
    (44) atom -> . INTEGER
    (45) atom -> . FLOAT
    (46) atom -> . STRING
    (47) atom -> . TRUE
    (48) atom -> . FALSE
    (49) atom -> . LBRACKET elements RBRACKET
    (50) atom -> . IDENTIFIER LBRACKET INTEGER RBRACKET

    IDENTIFIER      shift and go to state 14
    MINUS           shift and go to state 26
    NOT             shift and go to state 29
    LPAREN          shift and go to state 13
    INTEGER         shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    LBRACKET        shift and go to state 18

    expression                     shift and go to state 35
    assignment_statement           shift and go to state 11
    or_statement                   shift and go to state 17
    and_statement                  shift and go to state 21
    equality_statement             shift and go to state 22
    relational_statement           shift and go to state 23
    add_statement                  shift and go to state 24
    multiply_statement             shift and go to state 25
    unary_statement                shift and go to state 27
    exponent                       shift and go to state 28
    term                           shift and go to state 16
    atom                           shift and go to state 30

state 10

    (10) conditional_statement -> IF . expression COLON start ELSE start ENDIF
    (11) conditional_statement -> IF . expression COLON start ENDIF
    (12) expression -> . assignment_statement
    (13) assignment_statement -> . or_statement
    (14) assignment_statement -> . IDENTIFIER EQUALS or_statement
    (15) assignment_statement -> . IDENTIFIER LBRACKET INTEGER RBRACKET EQUALS INTEGER
    (16) assignment_statement -> . IDENTIFIER LBRACKET INTEGER RBRACKET EQUALS FLOAT
    (17) or_statement -> . and_statement
    (18) or_statement -> . or_statement OR and_statement
    (19) and_statement -> . equality_statement
    (20) and_statement -> . and_statement AND equality_statement
    (21) equality_statement -> . relational_statement
    (22) equality_statement -> . equality_statement EQ relational_statement
    (23) equality_statement -> . equality_statement NEQ relational_statement
    (24) relational_statement -> . add_statement
    (25) relational_statement -> . relational_statement LT add_statement
    (26) relational_statement -> . relational_statement GT add_statement
    (27) relational_statement -> . relational_statement LTEQ add_statement
    (28) relational_statement -> . relational_statement GTEQ add_statement
    (29) add_statement -> . multiply_statement
    (30) add_statement -> . add_statement PLUS multiply_statement
    (31) add_statement -> . add_statement MINUS multiply_statement
    (32) multiply_statement -> . unary_statement
    (33) multiply_statement -> . multiply_statement TIMES unary_statement
    (34) multiply_statement -> . multiply_statement DIVIDE unary_statement
    (35) multiply_statement -> . multiply_statement MOD unary_statement
    (36) unary_statement -> . exponent
    (37) unary_statement -> . MINUS unary_statement
    (38) unary_statement -> . NOT unary_statement
    (39) exponent -> . term
    (40) exponent -> . term POWER unary_statement
    (41) term -> . IDENTIFIER
    (42) term -> . atom
    (43) term -> . LPAREN expression RPAREN
    (44) atom -> . INTEGER
    (45) atom -> . FLOAT
    (46) atom -> . STRING
    (47) atom -> . TRUE
    (48) atom -> . FALSE
    (49) atom -> . LBRACKET elements RBRACKET
    (50) atom -> . IDENTIFIER LBRACKET INTEGER RBRACKET

    IDENTIFIER      shift and go to state 14
    MINUS           shift and go to state 26
    NOT             shift and go to state 29
    LPAREN          shift and go to state 13
    INTEGER         shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    LBRACKET        shift and go to state 18

    expression                     shift and go to state 36
    assignment_statement           shift and go to state 11
    or_statement                   shift and go to state 17
    and_statement                  shift and go to state 21
    equality_statement             shift and go to state 22
    relational_statement           shift and go to state 23
    add_statement                  shift and go to state 24
    multiply_statement             shift and go to state 25
    unary_statement                shift and go to state 27
    exponent                       shift and go to state 28
    term                           shift and go to state 16
    atom                           shift and go to state 30

state 11

    (12) expression -> assignment_statement .

    WHILE           reduce using rule 12 (expression -> assignment_statement .)
    FOR             reduce using rule 12 (expression -> assignment_statement .)
    IF              reduce using rule 12 (expression -> assignment_statement .)
    INPUT           reduce using rule 12 (expression -> assignment_statement .)
    PRINT           reduce using rule 12 (expression -> assignment_statement .)
    IDENTIFIER      reduce using rule 12 (expression -> assignment_statement .)
    MINUS           reduce using rule 12 (expression -> assignment_statement .)
    NOT             reduce using rule 12 (expression -> assignment_statement .)
    LPAREN          reduce using rule 12 (expression -> assignment_statement .)
    INTEGER         reduce using rule 12 (expression -> assignment_statement .)
    FLOAT           reduce using rule 12 (expression -> assignment_statement .)
    STRING          reduce using rule 12 (expression -> assignment_statement .)
    TRUE            reduce using rule 12 (expression -> assignment_statement .)
    FALSE           reduce using rule 12 (expression -> assignment_statement .)
    LBRACKET        reduce using rule 12 (expression -> assignment_statement .)
    $end            reduce using rule 12 (expression -> assignment_statement .)
    COLON           reduce using rule 12 (expression -> assignment_statement .)
    COMMA           reduce using rule 12 (expression -> assignment_statement .)
    RPAREN          reduce using rule 12 (expression -> assignment_statement .)
    ENDWHILE        reduce using rule 12 (expression -> assignment_statement .)
    ELSE            reduce using rule 12 (expression -> assignment_statement .)
    ENDIF           reduce using rule 12 (expression -> assignment_statement .)
    ENDFOR          reduce using rule 12 (expression -> assignment_statement .)


state 12

    (54) input_function -> INPUT . LPAREN IDENTIFIER RPAREN

    LPAREN          shift and go to state 37


state 13

    (43) term -> LPAREN . expression RPAREN
    (12) expression -> . assignment_statement
    (13) assignment_statement -> . or_statement
    (14) assignment_statement -> . IDENTIFIER EQUALS or_statement
    (15) assignment_statement -> . IDENTIFIER LBRACKET INTEGER RBRACKET EQUALS INTEGER
    (16) assignment_statement -> . IDENTIFIER LBRACKET INTEGER RBRACKET EQUALS FLOAT
    (17) or_statement -> . and_statement
    (18) or_statement -> . or_statement OR and_statement
    (19) and_statement -> . equality_statement
    (20) and_statement -> . and_statement AND equality_statement
    (21) equality_statement -> . relational_statement
    (22) equality_statement -> . equality_statement EQ relational_statement
    (23) equality_statement -> . equality_statement NEQ relational_statement
    (24) relational_statement -> . add_statement
    (25) relational_statement -> . relational_statement LT add_statement
    (26) relational_statement -> . relational_statement GT add_statement
    (27) relational_statement -> . relational_statement LTEQ add_statement
    (28) relational_statement -> . relational_statement GTEQ add_statement
    (29) add_statement -> . multiply_statement
    (30) add_statement -> . add_statement PLUS multiply_statement
    (31) add_statement -> . add_statement MINUS multiply_statement
    (32) multiply_statement -> . unary_statement
    (33) multiply_statement -> . multiply_statement TIMES unary_statement
    (34) multiply_statement -> . multiply_statement DIVIDE unary_statement
    (35) multiply_statement -> . multiply_statement MOD unary_statement
    (36) unary_statement -> . exponent
    (37) unary_statement -> . MINUS unary_statement
    (38) unary_statement -> . NOT unary_statement
    (39) exponent -> . term
    (40) exponent -> . term POWER unary_statement
    (41) term -> . IDENTIFIER
    (42) term -> . atom
    (43) term -> . LPAREN expression RPAREN
    (44) atom -> . INTEGER
    (45) atom -> . FLOAT
    (46) atom -> . STRING
    (47) atom -> . TRUE
    (48) atom -> . FALSE
    (49) atom -> . LBRACKET elements RBRACKET
    (50) atom -> . IDENTIFIER LBRACKET INTEGER RBRACKET

    IDENTIFIER      shift and go to state 14
    MINUS           shift and go to state 26
    NOT             shift and go to state 29
    LPAREN          shift and go to state 13
    INTEGER         shift and go to state 19
    FLOAT           shift and go to state 20
    STRING          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    LBRACKET        shift and go to state 18

    expression                     shift and go to state 38
    assignment_statement           shift and go to state 11
    or_statement                   shift and go to state 17
    and_statement                  shift and go to state 21
    equality_statement             shift and go to state 22
    relational_statement           shift and go to state 23
    add_statement                  shift and go to state 24
    multiply_statement             shift and go to state 25
    unary_statement                shift and go to state 27
    exponent                       shift and go to state 28
    term                           shift and go to state 16
    atom                           shift and go to state 30

state 14

    (14) assignment_statement -> IDENTIFIER . EQUALS or_statement
    (15) assignment_statement -> IDENTIFIER . LBRACKET INTEGER RBRACKET EQUALS INTEGER
    (16) assignment_statement -> IDENTIFIER . LBRACKET INTEGER RBRACKET EQUALS FLOAT
    (41) term -> IDENTIFIER .
    (50) atom -> IDENTIFIER . LBRACKET INTEGER RBRACKET
